Added better path handling for when the application is packaged

--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Electron React Parcel</title>
     <link rel="icon" type="image/png" href="./assets/logo.png">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./styles/master.scss">
 </head>
 <body>
     <div id="root" class="app-wrapper"></div>
     <!-- <script>
         window.require('./renderer.js');
     </script> -->
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
